2011-11-01  Niibe Yutaka  <gniibe@fsij.org>

	* boards/STBEE_MINI/board.h (TIMx): Define.
	boards/STBEE/board.h (TIMx): Ditto.
	boards/STM8S_DISCOVERY/board.h: Ditto.

	* src/pin-cir.c (pinpad_getline): New.
	(cir_timer_interrupt, cir_ext_interrupt): Use TIMx.
	(cir_key_is_backspace, cir_key_is_enter, pin_main, pindisp):
	Remove.
	(cir_codetable_dell_mr425, cir_codetable_aquos)
	(cir_codetable_regza, cir_codetable_bravia, ch_is_backspace)
	(ch_is_enter, find_char_codetable, hex, cir_getchar): New.
	(cir_timer_interrupt): Don't filter out ADDRESS.

	* src/openpgp.c (get_pinpad_input): Don't invoke thread,
	but just call pinpad_getline.

	* src/main.c (display_interaction, display_fatal_code)
	(display_status_code, led_blink): New.
	(main): Call display_* routine.
	(fatal): Notify main thread.
	* src/usb_prop.c (gnuk_device_SetConfiguration): Notify main
	thread.

	* src/pin-cir.c (pindisp): Remove.

	* boards/FST_01_00: New (for 8MHz FST-01).

	* src/ac.c (calc_md): Fix comparison.

	* src/call-rsa.c (RSA_SIGNATURE_LENGTH): Use KEY_CONTENT_LEN.
	(rsa_sign, rsa_decrypt): Likewise.
	(modulus_calc): Don't assume it's 2048-bit.

	* src/ac.c (verify_user_0): Fix for non-initialized PW1.

	* src/Makefile.in (MCFLAGS): Override MCFLAGS option for newer
	GCC of summon-arm-toolchain to add -mfix-cortex-m3-ldrd.
	NOTE: This should not be needed (as -mcpu=cortex-m3 defaults
	to -mfix-cortex-m3-ldrd for GCC-proper), but it is needed
	to select arm-none-eabi/lib/thumb2/libc.a correctly.

2011-10-14  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (__main_stack_size__): It's 1KB (was 512 byte).

2011-10-07  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.14.
	* src/usb_desc.c (gnukStringSerial): Updated.

	* src/random.c (random_init): Call neug_prng_reseed.

2011-10-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (random_bits): Remove.

	* src/openpgp.c (GPGthread): Remove unused event message.

	* src/main.c (main): Call random_init.
